--- a/stream-processor/pom.xml
+++ b/stream-processor/pom.xml
@@ -60,7 +60,12 @@
 			<artifactId>avro-maven-plugin</artifactId>
 			<version>1.10.2</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.7</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
