--- a/stream-processor/src/main/resources/application.yml
+++ b/stream-processor/src/main/resources/application.yml
@@ -17,15 +17,25 @@ topic:
   replicas: 3
   schema: http://10.33.121.148:8081
 stockTopics:
-  stockTransactions: StockTransactions_0_0_0
+  stockTransactions: StockTransactions_0_0_2
   stockVolume: stockVolume_0_0_0
+  stockDelta: StockToDisplay_0_0_0
+topologyTopics:
+  upper: upper
+  lower: lower
+  deltaState: DeltaState_0_0_0
+userTopics:
+  registered: RegisteringUsers_0_0_0
+  user_admin: Adminusers_0_0_0
+  user_local: LocalUsers_0_0_0
+  user_count: UserCount_0_0_0
 spring:
   application:
-    name: stream-prcessor4
+    name: stream-prcessor14
   kafka:
     streams:
       properties:
         cache.max.bytes.buffering: 10485760
         commit.interval.ms: 10000
-        default.timestamp.extractor: com.yadlings.streamprocessor.Stock.TimeStampExtractor
+#        default.timestamp.extractor: com.yadlings.streamprocessor.Stock.TimeStampExtractor
     bootstrap-servers: 10.33.121.90:9090,10.33.121.90:9091,10.33.121.90:9092
