--- a/in-action-consumer/pom.xml
+++ b/in-action-consumer/pom.xml
@@ -58,6 +58,11 @@
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.7</version>
+		</dependency>
 	</dependencies>
 
 	<build>
